page load styling done

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     </section>
 
     <section class="nav-links">
-        <a href="" class="about">About</a>
+        <a href="#about-me" class="about">About</a>
+        <a href="#work" class="work">Work</a>
         <a href="./assets/Casey_Johnson_Resume_4.17.21.pdf" target="_blank" class="resume">Resume</a>
-        <a href="" class="work">Work</a>
-        <a href="" class="contact">Contact</a>
+        <a href="#contact" class="contact">Contact</a>
     </section>
 
 
@@ -66,8 +66,10 @@
 
     </section>
     <!--Project Cards-->
-
-    <div class="container">
+<div>
+    <h5 class="work-header" id="work">Work</h5>
+</div>
+    <div class="container" >
         <div class="row">
             <div class="col">
                 <section class="middle-section-color2">
@@ -131,19 +133,43 @@
     </div>
     <div class="col">
         <section class="middle-section-color2">
-            <a href="https://johnsoncm.github.io/daily-planner/" target="_blank">
-                <div class="hw2"><img src="./assets/images/Calendar_App_1.png" class="card-img-top"
+            <a href="https://github.com/johnsoncm/Team_Profile_Generator" target="_blank">
+                <div class="hw2"><img src="./assets/images/Team_Website.png" class="card-img-top"
                         alt="image of a daily planner">
             </a>
             <h5 class="card-title"><a class="card-title-color" href="https://johnsoncm.github.io/daily-planner/"
-                    target="_blank">Work Day Scheduler</h5></a>
-            <p class="card-text">Track your daily tasks and save your progress.</p>
-            <a href="https://github.com/johnsoncm/daily-planner" target="_blank" class="navbar-item">Github</a>
+                    target="_blank">Team Profile Generator</h5></a>
+            <p class="card-text">Create a Team Profile</p>
+            <a href="https://github.com/johnsoncm/Team_Profile_Generator" target="_blank" class="navbar-item">Github</a>
     </div>
     </section>
     </div>
     </div>
+<!--  Footer Navbar w/ Contact Info  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id="contact">
+    <div class="container-fluid">
+        <a class="navbar-brand-contact">Contact Me</a>
 
+        <span class="navbar-text">
+
+            <a class="nav-link" href="https://www.linkedin.com/in/casey-johnson-11336b4a/" target="_blank"> <i
+                    class="fab fa-linkedin"></i></i></a>
+
+
+            <span>
+                <a class="nav-link" href="https://github.com/johnsoncm" target="_blank"><i
+                        class="fab fa-github"></i></a>
+            </span>
+            <span>
+                <a class="nav-link" href="mailto:johnsoncm3@gmail.com">Email</a>
+            </span>
+            <span>
+                <a class="nav-link active" aria-current="page" href="tel:2769716670">Phone</a>
+            </span>
+        </span>
+    </div>
+    </div>
+</nav>
 
 
 
