--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
     <h5 class="work-header" id="work">Work</h5>
 </div>
     <div class="container" >
-        <div class="row">
+        <div class="row row-cols-2">
             <div class="col">
                 <section class="middle-section-color2">
-                    <a href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank">
+                    <a href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank" class="nounderline">
                         <div class="Project-1"><img src="./assets/images/Cadmium_1.png" class="card-img-top"
                                 alt="image of art gallery">
                     </a>
@@ -101,6 +101,7 @@
         </section>
     </div>
     <div class="col">
+         <!-- <div class="row"> -->
         <section class="middle-section-color2">
             <a href="https://johnsoncm.github.io/passwordgenerator/" target="_blank">
                 <div class="hw1"><img src="./assets/images/PW_Generator_Image.png" class="card-img-top"
@@ -116,7 +117,7 @@
     </section>
 
     </div>
-    <div class="row">
+    <!-- <div class="row"> -->
         <div class="col">
             <section class="middle-section-color2">
                 <a href="https://johnsoncm.github.io/daily-planner/" target="_blank">
@@ -131,7 +132,7 @@
         </section>
 
     </div>
-    <div class="col">
+    <!-- <div class="col">
         <section class="middle-section-color2">
             <a href="https://github.com/johnsoncm/Team_Profile_Generator" target="_blank">
                 <div class="hw2"><img src="./assets/images/Team_Website.png" class="card-img-top"
@@ -143,7 +144,7 @@
             <a href="https://github.com/johnsoncm/Team_Profile_Generator" target="_blank" class="navbar-item">Github</a>
     </div>
     </section>
-    </div>
+    </div> -->
     </div>
 <!--  Footer Navbar w/ Contact Info  -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="contact">
