trying to get images formatted

--- a/index.html
+++ b/index.html
@@ -73,30 +73,34 @@
         <div class="row row-cols-2">
             <div class="col">
                 <section class="middle-section-color2">
-                    <a href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank" class="nounderline">
+                    <a href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank">
                         <div class="Project-1"><img src="./assets/images/Cadmium_1.png" class="card-img-top"
                                 alt="image of art gallery">
                     </a>
                     <h5 class="card-title"><a class="card-title-color"
                             href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank">Cadmium</h5></a>
                     <p class="card-text">An Art Event Finder App for the City of Richmond, VA</p>
-                    <a href="https://github.com/johnsoncm/cadmium" target="_blank" class="navbar-item">Github</a>
+                    <a href="https://ancient-lowlands-14789.herokuapp.com/" target="_blank" class="navbar-item">Deployed Link</a>
+                    <a href="https://github.com/johnsoncm/cadmium" target="_blank" class="navbar-item">Github Link</a>
+                    
+                    
             </div>
             </section>
         </div>
         <div class="col">
             <section class="middle-section-color2">
-                <a href="https://epurpur.github.io/Project1_NationalParkService/" target="_blank">
-                    <div class="Project-1"><img src="./assets/images/NPS_Page_Load.png" class="card-img-top"
+                <a href="https://epurpur.github.io/NationalParkService/" target="_blank">
+                    <div class="Project-1"><img src="./assets/images/NPS_photo_2.png" class="card-img-top"
                             alt="image of park website">
                 </a>
                 <h5 class="card-title"><a class="card-title-color"
-                        href="https://epurpur.github.io/Project1_NationalParkService/" target="_blank">National Park
+                        href="https://epurpur.github.io/NationalParkService/" target="_blank">National Park
                         and
                         Historic Site Finder</h5></a>
                 <p class="card-text">A searchable map to find National Parks and Historic Sites near you.</p>
+                <a href="https://epurpur.github.io/NationalParkService/" target="_blank" class="navbar-item">Deployed Link</a>
                 <a href="https://github.com/epurpur/Project1_NationalParkService" target="_blank"
-                    class="navbar-item">Github</a>
+                    class="navbar-item">Github Link</a>
         </div>
         </section>
     </div>
@@ -112,7 +116,8 @@
                     target="_blank">Password Generator
             </h5></a>
             <p class="card-text">Generate a safe and secure random password quickly and easily.</p>
-            <a href="https://github.com/johnsoncm/passwordgenerator" target="_blank" class="navbar-item">Github</a>
+            <a href="https://johnsoncm.github.io/passwordgenerator/" target="_blank" class="navbar-item">Deployed Link</a>
+            <a href="https://github.com/johnsoncm/passwordgenerator" target="_blank" class="navbar-item">Github Link</a>
     </div>
     </section>
 
@@ -127,7 +132,8 @@
                 <h5 class="card-title"><a class="card-title-color" href="https://johnsoncm.github.io/daily-planner/"
                         target="_blank">Work Day Scheduler</h5></a>
                 <p class="card-text">Track your daily tasks and save your progress.</p>
-                <a href="https://github.com/johnsoncm/daily-planner" target="_blank" class="navbar-item">Github</a>
+                <a href="https://johnsoncm.github.io/daily-planner/" target="_blank" class="navbar-item">Deployed Link</a>
+                <a href="https://github.com/johnsoncm/daily-planner" target="_blank" class="navbar-item">Github Link</a>
         </div>
         </section>
 
